--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
     <!-- 访问网络的变化, 需要某些信息用于网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <!--<uses-permission android:name="android.permission.GET_TASKS"/>-->
 
     <!-- 通过网络得到粗略位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -42,7 +42,7 @@
             android:name="TencentMapSDK"
             android:value="24KBZ-B23HG-RCKQT-IADZO-U2IFT-GIBWG" />
 
-        <activity android:name=".LoginActivity" android:screenOrientation="portrait">
+        <activity android:name=".WelcomeActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,7 +50,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Feedback" android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivityB" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivityC" android:screenOrientation="portrait"/>
         <activity android:name=".MyAbout" android:screenOrientation="portrait"/>
         <activity android:name=".MyBand" android:screenOrientation="portrait"/>
         <activity android:name=".MyHelp" android:screenOrientation="portrait"/>
@@ -84,7 +86,9 @@
             android:name="com.fudan.helper.CallingService"
             android:enabled="true"
             android:exported="true"/>
-        <service android:name="com.fudan.helper.FloatWindowService" />
+        <service android:name="com.fudan.helper.FloatWindowService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
